completed 2 box section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,39 @@
       </div><!--containter-->  
     </div><!--jumbotron-->  
 
+    <div class="container">
+      <div class="row">
+          <div class="col-md-4">
+            <div class="bluebox">
+              <h3>Learn...</h3>
+              <p>Lorum ipsum</p>
+                <a class="readmore" href="#">Read More</a>
+            </div><!--bluebox-->
+          </div><!--col-md-4-->
+            
+          <div class="col-md-4">
+            <div class="redbox">
+              <h3>Learn...</h3>
+              <p>Lorum ipsum</p>
+                <a class="readmore" href="#">Read More</a>
+            </div><!--bluebox-->
+          </div><!--col-md-4-->
+        
+          <div class="col-md-4">
+            <div class="bluebox">
+              <h3>Learn...</h3>
+              <p>Lorum ipsum</p>
+                <a class="readmore" href="#">Read More</a>
+            </div><!--bluebox-->
+          </div><!--col-md-4-->
+
+
+
+      </div><!--row-->
+    </div><!--container-->  
+  
+
+
    
   </body>
 </html>
