added media object

--- a/index.html
+++ b/index.html
@@ -104,14 +104,48 @@
                 <a class="readmore" href="#">Read More</a>
             </div><!--bluebox-->
           </div><!--col-md-4-->
+      </div><!--row-->
+  
+      <div class="row pad-top-30">
+        <div class="col-md-8">
+          <div class="panel panel-default">
+
+            <div class="panel-heading">
+              <h3 class="panel-title">What's Happening in the World?</h3>
+            </div><!--panel-heading-->
+
+            <div class="panel-body">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="images/small1.jpg" alt="...">
+                  </a>
+                </div><!--media-left-->
+                <div class="media-body">
+                  <h4 class="media-heading">Media heading</h4>
+                  ...
+                </div><!--media-body-->
+              </div><!--media-->
+            </div><!--panel-body-->
+
+          </div><!--panel panel-default-->
+        </div><!--col-md-8-->
 
 
+
+
+
+        <!--sidebar-->
+        <div class="col-md-4">
+          
+        </div><!--col-md-4-->
 
       </div><!--row-->
-    </div><!--container-->  
-  
 
 
-   
+
+
+
+    </div><!--container-->     
   </body>
 </html>
